maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:76: error: ':' expected but ',' found.
def testvaleur(x,y,valeur:Int):Boolean={
                ^JediEscaper:93: error: identifier expected but ';' found.
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^